2004-02-15  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/Makefile.am (AM_CPPFLAGS): Override AM_CPPFLAGS instead of
	CPPFLAGS, as per automake warning.
	* app/Makefile.am (AM_LDFLAGS): Override AM_LDFLAGS instead of
	LDFLAGS, as per automake warning.
	(run_dia.sh): More robust creation, and more easily moved.

	* app/undo.c (group_objects_revert): Don't double-free the objects
	list.  (#129221) Call object_add_updates on grouped objects.
	(ungroup_objects_revert): Call object_add_updates on grouped objects.

	* lib/diagramdata.c: Internal
	documentation. 

	* lib/polyshape.c (polyshape_update_data): Correctly calculate
	directions for polyshape corners (thanks, Valgrind!)

	* lib/attributes.c: 
	* lib/prop_attr.c (arrowprop_load): Use default arrow size.

	* lib/arrows.h: Default arrow size defined.  After all are using
	this, may lower to 0.4 or so.

	* app/lineprops_area.[ch]: New function to set the arrow type for an
	arrow chooser.

	* app/interface.c (create_lineprops_area): Set default line to
	have an arrow (fairly likely to be what's wanted, plus it shows
	the user where arrows are set).

	* app/app_procs.c: #ifdef HAVE_POPT popt args to process_opt

2004-02-14  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/metapost/render_metapost.c (draw_with_linestyle):
	Dotted lines should use dot_length, not dash_length.

2004-02-06  Hans Breuer  <hans@breuer.org>

	* app/interface.c : don't use gtk_drawing_area_size() to avoid
	the defaut size being also the minimum size. Instead use
	gtk_window_set_default_size() on the display shell. Fixes #130982.

	[fixing #131210, but umlauts in the 'main' filename still not really 
	 supported on systems where filesystem encoding != utf8
	(Problems with recent file menu and window title)]
	* lib/dia_xml.[hc] : add data_filename() and data_add_filename()
	to deal with possible differnces in filename encodings, see
	g_filename_<to|from>_utf8()
	* objects/standard/image.c : use them.
